--- a/templates/login.html
+++ b/templates/login.html
@@ -1,71 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="{{ url_for('static', filename='bootstrap-5.1.3-dist/css/bootstrap.min.css') }}" rel="stylesheet">
-    <title>Login</title>
-    <style>
-        .divider:after,
-        .divider:before {
-            content: "";
-            flex: 1;
-            height: 1px;
-            background: #eee;
-        }
-    </style>
+  <title>Universal WebMail Client &bull; Login</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="{{ url_for('static', filename='/bootstrap-5.1.3-dist/css/bootstrap.min.css') }}" rel="stylesheet">
+  <style>
+    #login-container {
+      background-image: url('{{ url_for('static', filename='images/email-logo.png') }}'); 
+      background-repeat: no-repeat; 
+      background-position:center top;
+      height: 100vh;
+    }
+  </style>
 </head>
-<body>
- <section class="vh-100">
-  <div class="container py-5 h-100">
-    <div class="row d-flex align-items-center justify-content-center h-100">
-      <div class="col-md-8 col-lg-7 col-xl-6">
-        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"
-          class="img-fluid" alt="Phone image">
-      </div>
-      <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-        <form>
-          <!-- Email input -->
-          <div class="form-outline mb-4">
-            <input type="email" id="form1Example13" class="form-control form-control-lg" />
-            <label class="form-label" for="form1Example13">Email address</label>
+<body>  
+
+<div class="container-fluid p-5 bg-primary text-white text-center">
+  <h1>Universal WebMail Client</h1>
+  <p>See all your email accounts in one place.</p> 
+</div>
+  
+<div class="container mt-5" id="login-container">
+  <div class="row">
+    <div class="col-sm-4">&nbsp;</div>
+    <div class="col-sm-4">
+      <h3>Login</h3>
+      <p>
+        <form action="/action_page.php">
+          <div class="mb-3 mt-3">
+            <!-- <label for="userid" class="form-label">User ID:</label> -->
+            <input type="userid" class="form-control" id="userid" placeholder="Enter User ID" name="userid">
           </div>
-
-          <!-- Password input -->
-          <div class="form-outline mb-4">
-            <input type="password" id="form1Example23" class="form-control form-control-lg" />
-            <label class="form-label" for="form1Example23">Password</label>
+          <div class="mb-3">
+            <!-- <label for="pwd" class="form-label">Password:</label> -->
+            <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pwd">
           </div>
-
-          <div class="d-flex justify-content-around align-items-center mb-4">
-            <!-- Checkbox -->
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked />
-              <label class="form-check-label" for="form1Example3"> Remember me </label>
-            </div>
-            <a href="#!">Forgot password?</a>
+          <div class="form-check mb-3">
+            <label class="form-check-label">
+              <input class="form-check-input" type="checkbox" name="remember"> Remember ne
+            </label>
           </div>
-
-          <!-- Submit button -->
-          <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
-
-          <div class="divider d-flex align-items-center my-4">
-            <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
-          </div>
-
-          <a class="btn btn-primary btn-lg btn-block" style="background-color: #3b5998" href="#!"
-            role="button">
-            <i class="fab fa-facebook-f me-2"></i>Continue with Facebook
-          </a>
-          <a class="btn btn-primary btn-lg btn-block" style="background-color: #55acee" href="#!"
-            role="button">
-            <i class="fab fa-twitter me-2"></i>Continue with Twitter</a>
-
+          <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-      </div>
+      </p>
     </div>
-  </div>
-</section>
- <script src="{{ url_for('static', filename='bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js') }}"></script>
+    <div class="col-sm-4">&nbsp;</div>
+</div>
+<script src="{{ url_for('static', filename='/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js') }}"></script>
 </body>
 </html>
