--- a/templates/login.html
+++ b/templates/login.html
@@ -1,52 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Universal WebMail Client &bull; Login</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="{{ url_for('static', filename='/bootstrap-5.1.3-dist/css/bootstrap.min.css') }}" rel="stylesheet">
-  <style>
-    #login-container {
-      background-image: url('{{ url_for('static', filename='images/email-logo.png') }}'); 
-      background-repeat: no-repeat; 
-      background-position:center top;
-      height: 100vh;
-    }
-  </style>
+    <title>Universal WebMail Client &bull; Login</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="{{ url_for('static', filename='/bootstrap-5.1.3-dist/css/bootstrap.min.css') }}" rel="stylesheet">
+    <style>
+        #login-container {
+            background-image: url('{{ url_for('static', filename='images/login-background-50.png') }}');
+            background-repeat: no-repeat;
+            background-position: center top;
+            height: 100vh;
+        }
+    </style>
 </head>
-<body>  
+<body>
 
 <div class="container-fluid p-5 bg-primary text-white text-center">
-  <h1>Universal WebMail Client</h1>
-  <p>See all your email accounts in one place.</p> 
+    <h1>Universal WebMail Client</h1>
+    <p>See all your email accounts in one place.</p>
 </div>
-  
+
 <div class="container mt-5" id="login-container">
-  <div class="row">
-    <div class="col-sm-4">&nbsp;</div>
-    <div class="col-sm-4">
-      <h3>Login</h3>
-      <p>
-        <form action="/action_page.php">
-          <div class="mb-3 mt-3">
-            <!-- <label for="userid" class="form-label">User ID:</label> -->
-            <input type="userid" class="form-control" id="userid" placeholder="Enter User ID" name="userid">
-          </div>
-          <div class="mb-3">
-            <!-- <label for="pwd" class="form-label">Password:</label> -->
-            <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pwd">
-          </div>
-          <div class="form-check mb-3">
-            <label class="form-check-label">
-              <input class="form-check-input" type="checkbox" name="remember"> Remember ne
-            </label>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-      </p>
+    <div class="row">
+        <div class="col-sm-4">&nbsp;</div>
+        <div class="col-sm-4">
+            <h3>Login</h3>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ 'danger' if category == 'error' else category }} alert-dismissible fade show">
+                            <strong>{{ category.capitalize() }}:</strong> {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+            <p>
+                <form action="/login" method="post">
+                    <div class="mb-3 mt-3">
+                        <!-- <label for="userid" class="form-label">User ID:</label> -->
+                        <input type="userid" class="form-control" id="uid" placeholder="Enter User ID" name="uid">
+                    </div>
+                    <div class="mb-3">
+                        <!-- <label for="pwd" class="form-label">Password:</label> -->
+                        <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pwd">
+                    </div>
+                    <div class="form-check mb-3">
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="checkbox" name="remember"> Remember ne
+                        </label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </p>
+        </div>
+        <div class="col-sm-4">&nbsp;</div>
     </div>
-    <div class="col-sm-4">&nbsp;</div>
-</div>
-<script src="{{ url_for('static', filename='/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js') }}"></script>
 </body>
 </html>
